--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -64,7 +64,7 @@ jobs:
       run: |
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install build-essential asciidoc binutils bzip2 gawk gettext git  libz-dev patch unzip subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler gperf wget curl swig rsync
+        sudo -E apt-get -qq install build-essential asciidoc binutils gawk gettext git  libz-dev patch unzip subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler gperf wget curl swig rsync
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
